# fs-ocr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: CONTRIBUTING.md  RELEASING.md
docs/CODEMAPS/: api.md  architecture.md  dependencies.md  internals.md
python/fs_ocr/: __init__.py  __init__.pyi  _fs_ocr.pyi
src/: config.rs  constants.rs  error.rs  image_utils.rs  lib.rs  text_utils.rs
src/coordinator/: debug_ocr.rs  metadata_parse.rs  mod.rs  pipeline.rs  region_preprocess.rs  validation.rs
src/detector/: black_box.rs  geometry.rs  grey_mask.rs  mod.rs
src/detector/grey_mask/: grouping.rs  mod.rs  morphology.rs
src/enums/: game_language.rs  item_category.rs  item_faction.rs  mod.rs  stockpile_type.rs
src/models/: mod.rs  stockpile.rs  stockpile_item.rs  timing.rs
src/ocr/: basic.rs  digit_matcher.rs  engine.rs  mod.rs  preprocess.rs  quantity.rs  tesseract.rs
src/template/: database.rs  label_match.rs  matching.rs  mod.rs  phash.rs  public_match.rs  type_match.rs
tessdata/: renner_numbers.traineddata
