[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fs-ocr"
dynamic = ["version"]
description = "Fast OCR library for Foxhole stockpile screenshots"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
keywords = ["ocr", "foxhole", "game", "stockpile", "template-matching"]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.maturin]
features = ["python", "pyo3/extension-module"]
python-source = "python"
module-name = "fs_ocr._fs_ocr"
include = [
    { path = "data/*.rten", format = "sdist" },
    { path = "data/*.rten", format = "wheel" },
]
