[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fs-ocr"
dynamic = ["version"]
description = "Fast OCR library for Foxhole stockpile screenshots"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
keywords = ["ocr", "foxhole", "game", "stockpile", "template-matching"]

[project.urls]
Homepage = "https://github.com/xurxogr/fs-ocr"
Repository = "https://github.com/xurxogr/fs-ocr"
Issues = "https://github.com/xurxogr/fs-ocr/issues"

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.maturin]
features = ["python", "pyo3/extension-module"]
python-source = "python"
module-name = "fs_ocr._fs_ocr"
